# fastapi_celery

./: ReadMe.txt  app_factory.py  config.py  pyproject.toml  routers.py  task.py
